Closed caption background box not aligned with top of frame captions
When multi-line captions appear at the top of the frame, the background box does not align properly with the text, causing it to overhang. There also appears to be a slight alignment issue for multi-line captions elsewhere in the frame but not severe enough to cause reading difficulty.