text_renderer: freetype: fix background alignment (fix #9949)